sort.basic.gnome.AlgGnomeSort.scala.error
Erreur de compilation :
AlgGnomeSort:8: error: type mismatch;
 found   : Unit
 required: Boolean
      if(i=0)
          ^